# bromure

./: .gitignore  .mcp.json  BROWSER_PANE_PLAN.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  IOS_CLIENT_PLAN.md  Jenkinsfile  Jenkinsfile.ac  Jenkinsfile.acscreenshots  Jenkinsfile.browser-image  Jenkinsfile.e2e  Jenkinsfile.e2e.ac  Jenkinsfile.image  Jenkinsfile.ios.testflight  Jenkinsfile.resolv-stub  Jenkinsfile.screenshots  Jenkinsfile.spaces  LICENSE  NATIVE_TERMINAL_PLAN.md  PREBUILT_IMAGE.md  PROXY.md  Package.swift  README.md  REMOTE_CONTROL.md  REMOTE_CONTROL_AC.md  REMOTE_FAT_CLIENT_PLAN.md  REMOTE_P2P_PLAN.md  SETTINGS.md  SETTINGS_AGENTIC.md  TEST_PLAN.md  WIN32_AC_PLAN.md  build.sh  build_and_copy.sh  package.sh  vLLM.md  vendor
Resources/: AppIcon.icns  BromureACIcon.icns
Tests/: ac-e2e.mjs  e2e.mjs  package-lock.json  package.json  stress-proxy.mjs  stress.mjs
guest/: Cargo.toml  README.md  build.sh
guest/clip-agent/: Cargo.toml
guest/clip-agent/src/: main.rs
guest/fb-agent/: Cargo.toml
guest/fb-agent/src/: main.rs
installer/: BromureAC.iss  OFFER-FOR-SOURCE.txt  build-installer.ps1
manual/: 01-introduction.mdx  02-installation.mdx  03-quick-start.mdx  04-concepts.mdx  05-workspaces.mdx  06-sessions.mdx  06a-browser.mdx  06b-automations.mdx  06c-coding-tasks.mdx  08-credentials.mdx  09-supply-chain.mdx  10-prompt-injection.mdx  11-tracing.mdx  12-fusion.mdx  13-local-models.mdx  14-remote-access.mdx  15-enterprise.mdx  16-automation-cli.mdx  16a-advanced.mdx  17-troubleshooting.mdx  18-glossary.mdx  19-appendix.mdx  index.mdx
scripts/: utun-spike.py  (+13 more)
(+979 files in other folders)
