[package]
name = "fb-agent"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "fb-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["socket", "fs", "uio"] }
